Promises that resolve late no longer make the preview window stuck with old data

--- a/src/components/StatisticsSearchField/StatisticsSearchField.style.scss
+++ b/src/components/StatisticsSearchField/StatisticsSearchField.style.scss
@@ -54,7 +54,7 @@
     opacity: 0;
     pointer-events: none;
     transform: translateY(2rem);
-    transition: transform 0.1s;
+    transition: transform 0.1s, opacity 0.1s;
 
     ul {
         margin: 0;
